--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 {% assign posts_total = site.posts | size %}
 
 {% assign user = site.github.owner %}
-
+{% assign user.name = 'Jared Wilson' %}
 {% if page.path contains '_posts' %}
   {% assign page_title = page.title %}
   {% assign meta_description = page.content | strip_html | strip_newlines | xml_escape | truncate: 300 %}
